--- a/DAB/dab-config.json
+++ b/DAB/dab-config.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://github.com/Azure/data-api-builder/releases/download/v1.4.26/dab.draft.schema.json",
+  "$schema": "https://raw.githubusercontent.com/Azure/data-api-builder/refs/heads/main/schemas/dab.draft.schema.json",
   "data-source": {
     "database-type": "mssql",
     "connection-string": "@env('MSSQL')",
@@ -17,7 +17,7 @@
       "enabled": true,
       "path": "/graphql",
       "allow-introspection": true
-    },
+    },    
     "host": {
       "cors": {
         "origins": [ "*" ],
@@ -31,12 +31,15 @@
   },
   "entities": {
     "SearchProducts": {
+      "description": "Use this stored procedure to find products using retrieval augmented generation pattern",
       "source": {
         "object": "dbo.search_products",
         "type": "stored-procedure",
-        "parameters": {
-          "searchTerm": ""
-        }
+        "parameters": [{
+          "name": "searchTerm",
+          "default": "",
+          "description": "what needs to be searched"
+        }]
       },
       "graphql": {
         "enabled": true,
