added DAB deployment script

--- a/DAB/dab-config.json
+++ b/DAB/dab-config.json
@@ -17,7 +17,14 @@
       "enabled": true,
       "path": "/graphql",
       "allow-introspection": true
-    },    
+    },  
+    "mcp": {
+      "enabled": true,
+      "dml-tools": { 
+        "describe-entities": true,
+        "execute-entity": true
+      }
+    },  
     "host": {
       "cors": {
         "origins": [ "*" ],
